loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:4: error: not found: value nb
    nb=0
    ^Poucet1:6: error: not found: value nb
      nb=nb+1}
      ^Poucet1:7: error: not found: value nb
  if (nb>2)
      ^