loopdowhile.Poucet1.scala.code
do{
  for (i <-1 to 5)
  	avance()
  	nb=0
 		if (estSurBiscuit()==true){
      nb=nb+1}
	if (nb>2)
    gauche()
	else 
  	droite()

}while(sortieTrouvee()==false)

avance()